--- a/src/raster/README
+++ b/src/raster/README
@@ -1,3 +1,12 @@
+10/2018
+SA 4.3.2 release
+updated Raster tools for EPIC
+
+    extractEPIC2CMAQ.cpp - added additional variable FBARE: Bare Land Fraction for Wind Erosion
+    computeGridGOES.cpp - removed hardcoded dimenstions so that program can be used to read new or old versions of GEOS Imager data. The coverage was extended in the new retrievals (from 1500x800 to 1552x1300).
+    computeSiteDailyWeather.cpp - increase the number of wet and dry deposition variables available from CMAQ
+    compute_EPICSiteData.cpp - Changed how a crop_acre is defined: crop_acre > cropArea_threshold && waterP < 50.
+
 09/2015
 SA 4.2 update release
         1. Modified the extraction tools for FEST-C.
